--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,13 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
+      function setModifiedDate() {
+      if (document.getElementById('last-modified')) {fetch("https://api.github.com/repos/{{ site.github.owner_name }}/{{ site.github.repository_name }}/commits?path={{page.path }}")
+      .then((response) => {
+      return response.json();
+      })
+      .then((commits) => { var modified = commits[0]['commit']['committer']['date'].slice(0,10); if(modified != "{{ page.date | date: "%Y-%m-%d" }}") { document.getElementById('last-modified').textContent = "Last Modified: " + modified;
+      }});}}
     </header>
 
     <main id="content" class="main-content" role="main">
