--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,30 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
+    <script type="text/javascript">
+    function setAccessedDate() {
+      if (document.getElementById('accessed-on')) {
+        var now = new Date();
+        var months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'];
+        var formattedDate = now.getDate().padStart(2, '0') + " " + months[now.getMonth()] + " " + now.getFullYear();
+        document.getElementById('accessed-on').textContent = " (accessed " + formattedDate + ")";
+      }
+    }
+    function setModifiedDate() {
+      if (document.getElementById('last-modified')) {
+        fetch("https://api.github.com/repos/{{ site.github.owner_name }}/{{ site.github.repository_name }}/commits?path={{ page.path }}")
+          .then((response) => {
+            return response.json();
+          })
+          .then((commits) => {
+            var modified = commits[0]['commit']['committer']['date'].slice(0, 10);
+            if (modified != "{{ page.date | date: " % Y -% m -% d" }}") {
+          document.getElementById('last-modified').textContent = "Last Modified: " + modified;
+        }
+      });
+    }
+      }
+  </script>
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
@@ -23,13 +47,6 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
-      function setModifiedDate() {
-      if (document.getElementById('last-modified')) {fetch("https://api.github.com/repos/{{ site.github.owner_name }}/{{ site.github.repository_name }}/commits?path={{page.path }}")
-      .then((response) => {
-      return response.json();
-      })
-      .then((commits) => { var modified = commits[0]['commit']['committer']['date'].slice(0,10); if(modified != "{{ page.date | date: "%Y-%m-%d" }}") { document.getElementById('last-modified').textContent = "Last Modified: " + modified;
-      }});}}
     </header>
 
     <main id="content" class="main-content" role="main">
