--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <link rel="shortcut icon" type="image/jpg" href="/images/Banner.png" />
+  <link rel="shortcut icon" type="image/jpg" href="images/Banner.png" />
   <!-- Discord embeds -->
   <meta content="TeenageClub" property="og:title" />
   <meta content="TeenageClub rules and guidelines!" property="og:description" />
