--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,8 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-        <a href="/index.md" class="btn">Main page</a>
-        <a href="/Pages/ServerRules.md" class="btn">Server Rules</a>
+        <a href="./" class="btn">Main page</a>
+        <a href="Rules" class="btn">Server Rules</a>
       {% endif %}
     </header>
 
