--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
       {% if site.github.is_project_page %}
         <a href="/TeenageClub/" class="btn">Main page</a>
         <a href="Rules" class="btn">Server Rules</a>
-        <a href="Staff-Rules" class="btn">Staff Rules</a></a>
+        <a href="Staff-Rules" class="btn">Staff Rules</a>
       {% endif %}
     </header>
 
