--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
         <a href="/TeenageClub/" class="btn">Main page</a>
         <a href="Rules" class="btn">Server Rules</a>
         <a href="Staff-Rules" class="btn">Staff Rules</a>
+        <a href="Moderation-Guides" class="btn">Moderation Guides</a>
       {% endif %}
     </header>
 
