--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
         <a href="Rules" class="btn">Server Rules</a>
         <a href="Staff-Rules" class="btn">Staff Rules</a>
         <a href="Moderation-Guides" class="btn">Moderation Guides</a>
+        <a href="Commandbook" class="btn">Commandbook</a>
       {% endif %}
     </header>
 
