--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,63 @@
   <meta content="#ffc0cb" data-react-helmet="true" name="theme-color" />
   <head>
     <meta charset="UTF-8">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+  }
+  .navbar {
+    overflow: hidden;
+    background-color: #333;
+  }
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  .subnav {
+    float: left;
+    overflow: hidden;
+  }
+  .subnav .subnavbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  .navbar a:hover,
+  .subnav:hover .subnavbtn {
+    background-color: blue;
+  }
+  .subnav-content {
+    display: none;
+    position: absolute;
+    left: 0;
+    background-color: blue;
+    width: 100%;
+    z-index: 1;
+  }
+  .subnav-content a {
+    float: left;
+    color: white;
+    text-decoration: none;
+  }
+  .subnav-content a:hover {
+    background-color: #eee;
+    color: black;
+  }
+  .subnav:hover .subnav-content {
+    display: block;
+  }
+</style>
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,6 +77,26 @@
     {% include head-custom.html %}
   </head>
   <body>
+  <div class="navbar">
+    <a href="/TeenageClub/">Home</a>
+    <div class="subnav">
+      <button class="subnavbtn">About <i class="fa fa-caret-down"></i></button>
+      <div class="subnav-content">
+        <a href="Rules">Server Rules</a>
+        <a href="Staff-Rules">Staff Ru;es</a>
+        <a href="Moderation-Guides">Moderation guide</a>
+        <a hred="Commandbook">Command book</a>
+      </div>
+    </div>
+    <div class="subnav">
+      <button class="subnavbtn">Services <i class="fa fa-caret-down"></i></button>
+      <div class="subnav-content">
+        <a href="Appeals">Appeals</a>
+        <a href="ContactUs">Contact form</a>
+        <a href="Applications">Applications</a>
+      </div>
+    </div>
+  </div>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
