--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,13 +43,13 @@
   }
   .navbar a:hover,
   .subnav:hover .subnavbtn {
-    background-color: blue;
+    background-color: linear-gradient(120deg, #155799, #159957);
   }
   .subnav-content {
     display: none;
     position: absolute;
     left: 0;
-    background-color: blue;
+    background-color: linear-gradient(120deg, #155799, #159957);
     width: 100%;
     z-index: 1;
   }
