--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
         <a href="Rules">Server Rules</a>
         <a href="Staff-Rules">Staff Ru;es</a>
         <a href="Moderation-Guides">Moderation guide</a>
-        <a hred="Commandbook">Command book</a>
+        <a href="Commandbook">Command book</a>
       </div>
     </div>
     <div class="subnav">
