--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,7 +83,7 @@
       <button class="subnavbtn">About <i class="fa fa-caret-down"></i></button>
       <div class="subnav-content">
         <a href="Rules">Server Rules</a>
-        <a href="Staff-Rules">Staff Ru;es</a>
+        <a href="Staff-Rules">Staff Rules</a>
         <a href="Moderation-Guides">Moderation guide</a>
         <a href="Commandbook">Command book</a>
       </div>
