--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -8,8 +8,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="JoashPereira">
     <link rel="stylesheet" href="https://joashp.github.io/404-pages/css/flat-404.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 0;
+        }
+    
+        .navbar {
+            overflow: hidden;
+            background-color: #333;
+        }
+    
+        .navbar a {
+            float: left;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+    
+        .subnav {
+            float: left;
+            overflow: hidden;
+        }
+    
+        .subnav .subnavbtn {
+            font-size: 16px;
+            border: none;
+            outline: none;
+            color: white;
+            padding: 14px 16px;
+            background-color: inherit;
+            font-family: inherit;
+            margin: 0;
+        }
+    
+        .navbar a:hover,
+        .subnav:hover .subnavbtn {
+            background-color: #155799;
+        }
+    
+        .subnav-content {
+            display: none;
+            position: absolute;
+            left: 0;
+            background-color: #155799;
+            width: 100%;
+            z-index: 1;
+        }
+    
+        .subnav-content a {
+            float: left;
+            color: white;
+            text-decoration: none;
+        }
+    
+        .subnav-content a:hover {
+            background-color: #eee;
+            color: black;
+        }
+    
+        .subnav:hover .subnav-content {
+            display: block;
+        }
+    </style>
 </head>
-
+<body>
+    <div class="navbar">
+        <a href="/TeenageClub/">Home</a>
+        <div class="subnav">
+            <button class="subnavbtn">About <i class="fa fa-caret-down"></i></button>
+            <div class="subnav-content">
+                <a href="Rules">Server Rules</a>
+                <a href="Staff-Rules">Staff Rules</a>
+                <a href="Moderation-Guides">Moderation guide</a>
+                <a href="Commandbook">Command book</a>
+            </div>
+        </div>
+        <div class="subnav">
+            <button class="subnavbtn">Services <i class="fa fa-caret-down"></i></button>
+            <div class="subnav-content">
+                <a href="Appeals">Appeals</a>
+                <a href="ContactUs">Contact form</a>
+                <a href="Applications">Applications</a>
+            </div>
+        </div>
+    </div>
+</body>
 <body class="flat">
     <div class="content">
         <div class="content-box">
