--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
       <button class="subnavbtn">Services <i class="fa fa-caret-down"></i></button>
       <div class="subnav-content">
         <a href="Appeals">Appeals</a>
-        <a href="ContactUs">Contact form</a>
+        <a href="ContactUs">Contact us</a>
         <a href="Applications">Applications</a>
       </div>
     </div>
