--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <meta content="TeenageClub" property="og:title" />
   <meta content="TeenageClub rules and guidelines!" property="og:description" />
   <meta content="https://ranger-4297.github.io/TeenageClub/" property="og:url" />
-  <meta content="images\Banner.png" property="og:image" />
+  <meta content=".\images\Banner.png" property="og:image" />
   <meta content="#ffc0cb" data-react-helmet="true" name="theme-color" />
   <head>
     <meta charset="UTF-8">
