--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <link rel="shortcut icon" type="image/jpg" href="images\Banner.png" />
+  <link rel="shortcut icon" type="image/jpg" href="images/Banner.png" />
   <!-- Discord embeds -->
   <meta content="TeenageClub" property="og:title" />
   <meta content="TeenageClub rules and guidelines!" property="og:description" />
   <meta content="https://ranger-4297.github.io/TeenageClub/" property="og:url" />
-  <meta content=".\images\Banner.png" property="og:image" />
+  <meta content="https://ranger-4297.github.io/TeenageClub/images/Banner.png" property="og:image" />
   <meta content="#ffc0cb" data-react-helmet="true" name="theme-color" />
   <head>
     <meta charset="UTF-8">
