--- a/_layouts/minor.html
+++ b/_layouts/minor.html
@@ -75,6 +75,11 @@
         .subnav:hover .subnav-content {
             display: block;
         }
+
+        body { padding-top: 40px; }
+            @media screen and (max-width: 768px) {
+        body { padding-top: 0px; }
+        }
     </style>
 
     {% seo %}
