--- a/_layouts/minor.html
+++ b/_layouts/minor.html
@@ -11,77 +11,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            margin: 0;
-        }
-
-        .navbar {
-            overflow: hidden;
-            background-color: #333;
-        }
-
-        .navbar a {
-            float: left;
-            font-size: 16px;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        .subnav {
-            float: left;
-            overflow: hidden;
-        }
-
-        .subnav .subnavbtn {
-            font-size: 16px;
-            border: none;
-            outline: none;
-            color: white;
-            padding: 14px 16px;
-            background-color: inherit;
-            font-family: inherit;
-            margin: 0;
-        }
-
-        .navbar a:hover,
-        .subnav:hover .subnavbtn {
-            background-color: #155799;
-        }
-
-        .subnav-content {
-            display: none;
-            position: absolute;
-            left: 0;
-            background-color: #155799;
-            width: 100%;
-            z-index: 1;
-        }
-
-        .subnav-content a {
-            float: left;
-            color: white;
-            text-decoration: none;
-        }
-
-        .subnav-content a:hover {
-            background-color: #eee;
-            color: black;
-        }
-
-        .subnav:hover .subnav-content {
-            display: block;
-        }
-
-        body { padding-top: 40px; }
-            @media screen and (max-width: 768px) {
-        body { padding-top: 0px; }
-        }
-    </style>
-
     {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style"
@@ -94,9 +23,32 @@
 </head>
 
 <body>
-    <div class="navbar">
-        <a href="/TeenageClub/">Home</a>
+    nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/TeenageClub/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    About
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="Rules">Server Rules</a>
+                    <a class="dropdown-item" href="Staff-Rules">Staff Rules</a>
+                    <a class="dropdown-item" href="Moderation-Guides">Moderation-Guides</a>
+                    <a class="dropdown-item" href="Commandbook">Command book</a>
+                </div>
+            </li>
+        </ul>
     </div>
+    </nav>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
