--- a/_layouts/minor.html
+++ b/_layouts/minor.html
@@ -25,6 +25,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +51,6 @@
         </ul>
     </div>
     </nav>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
         <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
