New layout format??

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -4,6 +4,10 @@
 {% include head-custom-google-analytics.html %}
 
 <!-- You can set your favicon here -->
-<!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
-
+<link rel="shortcut icon" type="image/jpg" href="images\Banner.png"/> <!-- Favicon -->
+<!-- Discord embeds -->
+<meta content="https://ranger-4297.github.io/TeenageClub/{{site.permalink}}" property="og:url"/> <!-- Embed URL -->
+<meta content="{{ page.description | default: site.description | default: site.github.project_tagline }}" property="og:description"/> <!-- Embed deescription-->
+<meta content="https://ranger-4297.github.io/TeenageClub/images/Banner.png" property="og:image"/> <!-- Embed image -->
+<meta content="#ffc0cb" data-react-helmet="true" name="theme-color"/> <!-- Embed colour -->
 <!-- end custom head snippets -->
