--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -9,5 +9,5 @@
 <meta content="https://ranger-4297.github.io/TeenageClub/{{site.permalink}}" property="og:url"/> <!-- Embed URL -->
 <meta content="{{ page.description | default: site.description | default: site.github.project_tagline }}" property="og:description"/> <!-- Embed deescription-->
 <meta content="https://ranger-4297.github.io/TeenageClub/images/Banner.png" property="og:image"/> <!-- Embed image -->
-<meta content="#ffc0cb" data-react-helmet="true" name="theme-color"/> <!-- Embed colour -->
+<meta content="#2f3136" data-react-helmet="true" name="theme-color"/> <!-- Embed colour -->
 <!-- end custom head snippets -->
