New directories+gemfile lock changes

--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -77,7 +77,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="/TeenageClub/">Home</a>
+        <a href="Home">Home</a>
     </div>
 </body>
 <body class="flat">
