--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   {% include head-custom.html %}
+  <body style="background-color:#2f3136"></body>
 </head>
 
 <body>
