--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,7 @@
             aria-expanded="false">Server</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="Staff">Server Staff</a>
+            <a class="dropdown-item" href="Changelog">Changelog</a>
           </div>
         </li>
       </ul>
