--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="Staff">Server Staff</a>
             <a class="dropdown-item" href="Changelog">Changelog</a>
+            <a class="dropdown-item" href="Invite">Invite</a>
           </div>
         </li>
       </ul>
