Update navbar link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,29 +31,29 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">About</a>
+            aria-haspopup="true" aria-expanded="false">Rules & info</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="Rules">Server Rules</a>
-            <a class="dropdown-item" href="Staff-Rules">Staff Rules</a>
-            <a class="dropdown-item" href="Moderation-Guides">Moderation-Guides</a>
-            <a class="dropdown-item" href="Commandbook">Command book</a>
+            <a class="dropdown-item" href="rules">Server Rules</a>
+            <a class="dropdown-item" href="staff-rules">Staff Rules</a>
+            <a class="dropdown-item" href="mod-guides">Moderation-Guides</a>
+            <a class="dropdown-item" href="handbook">Command book</a>
           </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">Services</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="Appeals">Appeals</a>
-            <a class="dropdown-item" href="Applications">Applications</a>
+            <a class="dropdown-item" href="appeals">Appeals</a>
+            <a class="dropdown-item" href="applications">Applications</a>
           </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">Server</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="Staff">Server Staff</a>
-            <a class="dropdown-item" href="Changelog">Changelog</a>
-            <a class="dropdown-item" href="https://discord.gg/WSysUXZrpD">Invite</a>
+            <a class="dropdown-item" href="server-staff">Server Staff</a>
+            <a class="dropdown-item" href="changelog">Changelog</a>
+            <a class="dropdown-item" href="invite">Invite</a>
           </div>
         </li>
       </ul>
