Adds support for importing HTML into other pages

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -10,4 +10,5 @@
 <meta content="{{ page.description | default: site.description | default: site.github.project_tagline }}" property="og:description"/> <!-- Embed deescription-->
 <meta content="https://ranger-4297.github.io/TeenageClub/assets/images/Banner.png" property="og:image"/> <!-- Embed image -->
 <meta content="#2f3136" data-react-helmet="true" name="theme-color"/> <!-- Embed colour -->
+<script src="assets\js\include.js"></script>
 <!-- end custom head snippets -->
