--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="{{ site.lang | default: " en-US" }}">
 
 <head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/css/main.css" type="text/css">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   {% seo %}
@@ -19,8 +19,8 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark#">
-    <a class="navbar-brand" href="#">Navigation</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+    <img src="\assets\images\Banner.png" width="30" height="30" alt="">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -33,27 +33,27 @@
           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">Rules & info</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="rules">Server Rules</a>
-            <a class="dropdown-item" href="staff-rules">Staff Rules</a>
-            <a class="dropdown-item" href="mod-guides">Moderation-Guides</a>
-            <a class="dropdown-item" href="handbook">Command book</a>
+            <a class="dropdown-item text-white" href="rules">Server Rules</a>
+            <a class="dropdown-item text-white" href="staff-rules">Staff Rules</a>
+            <a class="dropdown-item text-white" href="mod-guides">Moderation-Guides</a>
+            <a class="dropdown-item text-white" href="handbook">Command book</a>
           </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">Services</a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="appeals">Appeals</a>
-            <a class="dropdown-item" href="applications">Applications</a>
+          <div class="dropdown-menu text-white" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item text-white" href="appeals">Appeals</a>
+            <a class="dropdown-item text-white" href="applications">Applications</a>
           </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">Server</a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="server-staff">Server Staff</a>
-            <a class="dropdown-item" href="changelog">Changelog</a>
-            <a class="dropdown-item" href="invite">Invite</a>
+          <div class="dropdown-menu text-white" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item text-white" href="server-staff">Server Staff</a>
+            <a class="dropdown-item text-white" href="changelog">Changelog</a>
+            <a class="dropdown-item text-white" href="invite">Invite</a>
           </div>
         </li>
       </ul>
