--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -1,84 +1,64 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html lang="{{ site.lang | default: " en-US" }}">
 
 <head>
-    <meta charset="utf-8">
-    <title>404 - Flat</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://joashp.github.io/404-pages/css/flat-404.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" type="text/css">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            margin: 0;
-        }
-    
-        .navbar {
-            overflow: hidden;
-            background-color: #333;
-        }
-    
-        .navbar a {
-            float: left;
-            font-size: 16px;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-    
-        .subnav {
-            float: left;
-            overflow: hidden;
-        }
-    
-        .subnav .subnavbtn {
-            font-size: 16px;
-            border: none;
-            outline: none;
-            color: white;
-            padding: 14px 16px;
-            background-color: inherit;
-            font-family: inherit;
-            margin: 0;
-        }
-    
-        .navbar a:hover,
-        .subnav:hover .subnavbtn {
-            background-color: #155799;
-        }
-    
-        .subnav-content {
-            display: none;
-            position: absolute;
-            left: 0;
-            background-color: #155799;
-            width: 100%;
-            z-index: 1;
-        }
-    
-        .subnav-content a {
-            float: left;
-            color: white;
-            text-decoration: none;
-        }
-    
-        .subnav-content a:hover {
-            background-color: #eee;
-            color: black;
-        }
-    
-        .subnav:hover .subnav-content {
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" href="https://joashp.github.io/404-pages/css/flat-404.css" />
+    {% seo %}
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style"
+        type="text/css" crossorigin>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#157878">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    {% include head-custom.html %}
 </head>
+
 <body>
-    <div class="navbar">
-        <a href="/">Home</a>
-    </div>
-</body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <img src="\assets\images\Banner.png" width="30" height="30" alt="">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">Rules & info</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item text-white" href="rules">Server Rules</a>
+                        <a class="dropdown-item text-white" href="staff-rules">Staff Rules</a>
+                        <a class="dropdown-item text-white" href="mod-guides">Moderation-Guides</a>
+                        <a class="dropdown-item text-white" href="handbook">Command book</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">Services</a>
+                    <div class="dropdown-menu text-white" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item text-white" href="appeals">Appeals</a>
+                        <a class="dropdown-item text-white" href="applications">Applications</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">Server</a>
+                    <div class="dropdown-menu text-white" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item text-white" href="server-staff">Server Staff</a>
+                        <a class="dropdown-item text-white" href="changelog">Changelog</a>
+                        <a class="dropdown-item text-white" href="invite">Invite</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
 <body class="flat">
     <div class="content">
         <div class="content-box">
@@ -106,4 +86,14 @@
     <script src="https://joashp.github.io/404-pages/js/common/jquery.min.js"></script>
     <script src="https://joashp.github.io/404-pages/js/common/bootstrap.min.js"></script>
 </body>
+
+    </main>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
