Updates to text color

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,28 +32,28 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">Rules & info</a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="rules">Server Rules</a>
-            <a class="dropdown-item" href="staff-rules">Staff Rules</a>
-            <a class="dropdown-item" href="mod-guides">Moderation-Guides</a>
-            <a class="dropdown-item" href="handbook">Command book</a>
+          <div class="dropdown-menu text-white" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item text-white" href="rules">Server Rules</a>
+            <a class="dropdown-item text-white" href="staff-rules">Staff Rules</a>
+            <a class="dropdown-item text-white" href="mod-guides">Moderation-Guides</a>
+            <a class="dropdown-item text-white" href="handbook">Command book</a>
           </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">Services</a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="appeals">Appeals</a>
-            <a class="dropdown-item" href="applications">Applications</a>
+          <div class="dropdown-menu text-white" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item text-white" href="appeals">Appeals</a>
+            <a class="dropdown-item text-white" href="applications">Applications</a>
           </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">Server</a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="server-staff">Server Staff</a>
-            <a class="dropdown-item" href="changelog">Changelog</a>
-            <a class="dropdown-item" href="invite">Invite</a>
+          <div class="dropdown-menu text-white" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item text-white" href="server-staff">Server Staff</a>
+            <a class="dropdown-item text-white" href="changelog">Changelog</a>
+            <a class="dropdown-item text-white" href="invite">Invite</a>
           </div>
         </li>
       </ul>
