Updates to image

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -8,7 +8,7 @@
 <!-- Discord embeds -->
 <meta content="https://teenageclub.eu/{{site.permalink}}" property="og:url"/> <!-- Embed URL -->
 <meta content="{{ page.description | default: site.description | default: site.github.project_tagline }}" property="og:description"/> <!-- Embed deescription-->
-<meta content="./assets/images/Banner.png" property="og:image"/> <!-- Embed image -->
+<meta content="https://teenageclub.eu/assets/images/Banner.png" property="og:image"/> <!-- Embed image -->
 <meta content="#2f3136" data-react-helmet="true" name="theme-color"/> <!-- Embed colour -->
 <script src="assets\js\include.js"></script>
 <!-- end custom head snippets -->
